--- a/app/public/mybooks.html
+++ b/app/public/mybooks.html
@@ -38,7 +38,7 @@
   <body>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <h1>My favourite books</h1>
-     <table class="table table-striped table-hover table-condensed">
+     <table class="table table-striped table-hover table-condensed" id="myTable_id">
        <thead>
         <tr>  
           <th class="text-center"> Title </th> 
@@ -131,4 +131,8 @@
 
 
   </body>
+  <script src='js/tablesort.min.js'></script>
+  <script>
+    new Tablesort(document.getElementById('myTable_id'));
+  </script>
 </html>
