--- a/app/public/myinterests.html
+++ b/app/public/myinterests.html
@@ -46,7 +46,7 @@
               </ul>
       </div>
 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-  <a href="https://www.youtube.com/watch?v=-AwYcE5LmHQ"> <img src="images/fight.jpg" alt="Mikasa defeats" class="img-responsive"> </a>
+  <a href="https://www.youtube.com/watch?v=-AwYcE5LmHQ"> <img src="img/fight.jpg" alt="Mikasa defeats" class="img-responsive"> </a>
 </div>
 
   </body>
