--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="https://unpkg.com/vue@next"></script>
+
   </head>
 
 
@@ -17,49 +18,53 @@
     <header class="row">
 
     
-    <div class="center col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-      <center> <h1>My Website</h1> </center>
+    <div class="center col-12"> 
+       <h1> My Website </h1>
+
     </div>
+
     </header>
 
-    <nav class="row navbar navbar-default">
-      <div class="navbar-header">
-        <button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </div>
-
-      <div class="collapse navbar-collapse" id="menu">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html"> Home </a></li>
-          <li><a href="mybooks.html"> My Books </a></li>
-          <li><a href="myinterests.html">My Interests </a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mybooks.html">My Books</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="myinterests.html">My Interests</a>
+            </li>
+          </ul>
       </div>
     </nav>
-
     <main class="row">
    
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-        <center> <h1> My name is Mikasa Ackermann. <h1>
-        <a href="img/mikasa.png" target="_blank" > <img src="img/mikasa.png" alt="Headshot Mikasa" height="100px" width="100px" class="img-responsive"> </a> </center>
-        <center> <h5 class="override"> Source:"https://attackontitan.fandom. <br>
-        com/wiki/Mikasa_Ackermann_(Anime)" </h5> </center>
-        </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-              <br> <br> <ul> <li> I am from Paradise Island. </li> <br>
-              <li> I was born on the 18th of January, 1999.</li> <br>
-              <li>I am 22 years old now. </li> <br>
-              <li>mail to:<a href="mailto: mikasa.ackermann@yahoo.com"> mikasa.ackermann@yahoo.com </a> </li><br>
-              </ul>
-
-              </h3>
-          </div>
-
+        <!--<form v-on:submit.prevent="fetchUserData"> 
+          <button type="submit"> Refresh </button>
+        </form>-->
+      <div id="randomuser" class="container-fluid">
+        <a v-bind:href="person.picture.medium" target="_blank"> <img v-bind:src="person.picture.medium" alt="Random User" height="200"></a> 
+        <ol>
+          <li>  My name is {{ person.name.first }} {{ person.name.last }} </li>   
+          <li> Where I am from : {{ person.location.country }} </li> 
+          <li> My date of birth is {{ prettyBirthday }} </li> 
+          <li> My age is {{ person.dob.age }} </li> 
+          <li>Email me at <a v-bind:href="'mailto:'+person.email"> {{ person.email }} </a> </li>
+        </ol>
+      </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    
+    <script src="js/index.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
   </body>
-  
   
 </html>
