--- a/app/public/myinterests.html
+++ b/app/public/myinterests.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    
   </head>
 
 
@@ -18,24 +18,27 @@
 
     
     <div class="center col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-      <center> <h1>My Website</h1> </center>
+      <center> <h1>My Website </h1> </center>
     </div>
     </header>
 
-    <nav class="row navbar navbar-default">
-      <div class="navbar-header">
-        <button class="navbar-toggle" data-toggle="collapse" data-target="#menu">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </div>
-
-      <div class="collapse navbar-collapse" id="menu">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="mybooks.html"> My Books </a></li>
-          <li><a href="myinterests.html">My Interests</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mybooks.html">My Books</a>
+            </li>
+            <li class="nav-item"></li>
+              <a class="nav-link active" href="myinterests.html">My Interests</a>
+            </li>
+          </ul>
       </div>
     </nav>
 
