--- a/app/public/mybooks.html
+++ b/app/public/mybooks.html
@@ -15,7 +15,7 @@
 
     <header class="row">
   <div class="center col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-      <center> <h1> My Website</h1> </center>
+      <h1 class="text-center"> My Website </h1> 
     </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -123,8 +123,8 @@
         <label for="MSRP"> MSRP (USD) : </label> 
         <input type="text" name="MSRP" id="MSRP"> <br>
        
-        Additional Details: <br>
-        <textarea name="notes" id="notes"> </textarea> <br>
+        <p> Additional Details </p>
+        <p> <textarea name="notes" id="notes"> </textarea> </p>
          <input type="submit" name="submit" id="submit" value="Submit" class="button">      
     </div>
 
