--- a/app/public/index.html
+++ b/app/public/index.html
@@ -19,7 +19,7 @@
 
     
     <div class="center col-12"> 
-       <h1> My Website </h1>
+       <h1 class="text-center"> My Website </h1>
 
     </div>
 
@@ -50,7 +50,7 @@
           <button type="submit"> Refresh </button>
         </form>
       <div id="randomuser" class="container-fluid">
-        <a v-bind:href="person.picture.medium" target="_blank"> <img v-bind:src="person.picture.medium" alt="Random User" height="200"></a> 
+        <a v-bind:href="person.picture.medium" target="_blank"> <img v-bind:src="person.picture.medium" alt="Random User"></a> 
         <ol>
           <li>  My name is {{ person.name.first }} {{ person.name.last }} </li>   
           <li> Where I am from : {{ person.location.country }} </li> 
