--- a/app/public/myinterests.html
+++ b/app/public/myinterests.html
@@ -18,7 +18,7 @@
 
     
     <div class="center col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
-      <center> <h1>My Website </h1> </center>
+      <h1 class="text-center">My Website </h1> 
     </div>
     </header>
 
@@ -43,9 +43,9 @@
     </nav>
 
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-              <br> <ul> <li> I kill Titans in my pastime. </li> <br>
-              <li> I like Eren Jaeger and will forever protect him. </li> <br>
-              <li>I also enjoy listening to music during the time I don't kill Titans. </li> <br>
+              <br> <ul> <li> I kill Titans in my pastime. </li> 
+              <li> I like Eren Jaeger and will forever protect him. </li> 
+              <li>I also enjoy listening to music during the time I don't kill Titans. </li> 
               </ul>
       </div>
 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
