--- a/app/public/mybooks.html
+++ b/app/public/mybooks.html
@@ -9,6 +9,7 @@
 
     </script>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   
   <body class="container bg">  
@@ -40,6 +41,7 @@
   <body>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <h1>My favourite books</h1>
+    <div id='booksApp'>
      <table class="table table-striped table-hover table-condensed" id="myTable_id">
        <thead>
         <tr>  
@@ -52,53 +54,13 @@
         </tr> 
        </thead>
       <tbody>
-        <tr>
-        <td class="text-center"> The History of Tom Jones, a Foundling </td> 
-        <td class="text-center"> Henry Fielding </td>	
-        <td class="text-center"> 1989 </td>
-        <td class="text-center"> Penguin Co. </td>
-        <td class="text-center"> 368 </td>
-        <td class="text-center"> 12 </td>
-        </tr>
-        <tr>
-        <td class="text-center"> Pride and Prejudice </td> 
-        <td class="text-center"> Jane Austen </td>	
-        <td class="text-center"> 1974 </td>
-        <td class="text-center"> B & B </td>
-        <td class="text-center"> 235 </td>
-        <td class="text-center"> 15 </td>
-        </tr>
-        <tr>
-        <td class="text-center"> The Red and the Black </td>
-        <td class="text-center"> Stendthal </td>	
-        <td class="text-center"> 1886 </td>
-        <td class="text-center"> Marshall Brothers </td>
-        <td class="text-center"> 545 </td>
-        <td class="text-center"> 17 </td>
-        </tr>
-        <tr>
-          <td class="text-center"> Le Père Goriot </td>
-          <td class="text-center"> Honoré de Balzac </td>	
-        <td class="text-center"> 1912 </td>
-        <td class="text-center"> Lumineers </td>
-        <td class="text-center"> 556 </td>
-        <td class="text-center"> 16 </td>
-        </tr>
-        <tr>
-        <td class="text-center"> David Copperfield </td>
-         <td class="text-center"> Charles Dickens </td>	
-        <td class="text-center"> 1976 </td>
-        <td class="text-center"> Penguin Co. </td>
-        <td class="text-center"> 400 </td>
-        <td class="text-center"> 13 </td>
-        </tr>
-        <tr>
-        <td class="text-center"> Moby Dick </td>
-         <td class="text-center"> Herman Melville </td>	
-        <td class="text-center"> 2000 </td>
-        <td class="text-center"> Marble </td>
-        <td class="text-center"> 345 </td>
-        <td class="text-center"> 18 </td>
+        <tr v-for="book in books">
+          <td>{{ book.Title }}</td>
+          <td>{{ book.Author }}</td>
+          <td>{{ book.Year_Published }}</td>
+          <td> {{ book.Publisher }}</td>
+          <td>{{ book.page_count }}</td>
+          <td>{{ book.MSRP }}</td>
         </tr>
       </tbody>
       <tfoot>
@@ -110,31 +72,44 @@
       </tfoot>
 
      </table>
-    </div>
+   
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-      <form action="confirmation.html" method="post">
+      <form v-on:submit.prevent="postNewBook" method="post">
         <label for="Title"> Title: </label> 
-        <input type="text" name="title" id="title"> <br>
-        <label for="Author"> Author: </label> <input type="text" name="Author" id="Author"> <br>
-        <label for="Year Published"> Year Published: </label> 
-        <input type="text" name="yearpublished" id="yearpublished"> <br>
-        <label for="Page Count"> Page Count: </label> 
-        <input type="text" name="Pagecount" id="Pagecount"> <br>
-        <label for="MSRP"> MSRP (USD) : </label> 
-        <input type="text" name="MSRP" id="MSRP"> <br>
+        <input type="text" v-model="bookForm.Title" 
+        class="form-control" id="title" >        
+        <label for="Author"> Author: </label> 
+        <input type="text" v-model="bookForm.Author" 
+        class="form-control" id="author">
+        <label for="yearpublished" 
+        class="form-label">Year Published</label>
+        <input type="number" v-model="bookForm.Year_Published"
+        class="form-control" id="yearpublished">
+        <label for="publisher" 
+        class="form-label">Publisher</label>
+        <input type="text" v-model="bookForm.Publisher"
+        class="form-control" id="publisher">
+        <label for="pagecount" class="form-label">Page Count</label>
+        <input type="text" v-model="bookForm.page_count"
+        class="form-control" id="pagecount">
+        <label for="msrp" class="form-label">MSRP</label>
+        <input type="number" step="0.01" v-model="bookForm.MSRP"
+        class="form-control" id="msrp">
+        
        
         <p> Additional Details </p>
         <p> <textarea name="notes" id="notes"> </textarea> </p>
          <input type="submit" name="submit" id="submit" value="Submit" class="button">      
     </div>
+  </form>
+  </div>
 
 
 
 
 
   </body>
-  <script src='js/tablesort.min.js'></script>
-  <script>
-    new Tablesort(document.getElementById('myTable_id'));
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+  <script src="js/books.js"></script>
 </html>
